objects/tdc_cti__Call_Routing_Step__c/tdc_cti__Call_Routing_Step__c.object-meta.xml
<CustomObject>
    <label>Call Routing Step</label>
    <nameField>
        <label>Call Routing Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Routing Step</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>