objects/tdc_cti__Call_Routing_Step__c/fields/tdc_cti__Call_Routing__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Routing__c</fullName>
    <label>Call Routing</label>
    <referenceTo>tdc_cti__Call_Routing__c</referenceTo>
    <relationshipLabel>Call Routing Step</relationshipLabel>
    <relationshipName>Call_Routing_Step</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>