objects/tdc_cti__Call_Routing_Step__c/fields/tdc_cti__Call_Routing_Entry__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Routing_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Routing Entry</label>
    <referenceTo>tdc_cti__Call_Routing_Step__c</referenceTo>
    <relationshipLabel>Call Routing Step (Call Routing Entry)</relationshipLabel>
    <relationshipName>Call_Routing_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>