objects/tdc_cti__Call_Routing_Step__c/fields/tdc_cti__Description__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>