objects/tdc_cti__Call_Routing_Step__c/fields/tdc_cti__End_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>