objects/tdc_cti__Call_Routing_Step__c/fields/tdc_cti__Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any Day</fullName>
                <default>true</default>
                <label>Any Day</label>
            </value>
            <value>
                <fullName>Weekdays</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>