objects/tdc_cti__Call_Routing_Step__c/fields/tdc_cti__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>