objects/tdc_cti__Call_Routing_Step__c/fields/tdc_cti__Time_Range__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Time_Range__c</fullName>
    <label>Time Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Day</fullName>
                <default>true</default>
                <label>All Day</label>
            </value>
            <value>
                <fullName>In Between</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>